[gd_scene load_steps=2 format=3 uid="uid://drljc12idjfwg"]

[ext_resource type="Script" uid="uid://bnrdmyjt6udy6" path="res://Scripts/pauseMenu.gd" id="1_15pn7"]

[node name="Node2D" type="Control" groups=["pauseMenu"]]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_15pn7")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="continue" type="RichTextLabel" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Return To Game"
fit_content = true
scroll_active = false
autowrap_mode = 0
justification_flags = 0

[node name="leave" type="RichTextLabel" parent="CenterContainer/VBoxContainer"]
clip_contents = false
layout_mode = 2
text = "Return To Main Menu"
fit_content = true
scroll_active = false
autowrap_mode = 0
autowrap_trim_flags = 0
justification_flags = 0

[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/continue" to="." method="_on_continue_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer/VBoxContainer/continue" to="." method="_on_continue_mouse_exited"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/leave" to="." method="_on_leave_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer/VBoxContainer/leave" to="." method="_on_leave_mouse_exited"]
